--- a/templates/App_Login/login.html
+++ b/templates/App_Login/login.html
@@ -3,7 +3,7 @@
 {% block title_block %} Login {% endblock %}
 {% block body_block %}
 <h2>Login:</h2>
-<form>
+<form method="POST">
     {{form|crispy}}
     {% csrf_token %}
     <button type="submit" class="btn btn-primary btn-sm">Login</button>
