--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'App_Login:profile' %}">Profile</a>
-                        <a class="dropdown-item">Orders</a>
+                        <a class="dropdown-item" href="{% url 'App_Payment:orders' %}">Orders</a>
                         <div class="dropdown-divider">
                         </div>
                         <a class="dropdown-item" href="{% url 'App_Login:logout' %}">Logout</a>
